# 2026-Vigie

./: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
app/: audit.py  database.py  main.py
app/models/: domain.py
app/services/: accounting.py  bootstrap.py  pdf_reports.py
app/ui/: accounts.py  categories.py  logs.py  lots.py  matrix.py  operations.py  owners.py  reports.py  theme.py
app/utils/: formatters.py
tests/: README.md  conftest.py  test_categories.py  test_operations.py
