[project]
name = "2026-vigie"
version = "0.1.0"
description = "Gestion de biens immobiliers en indivision."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "nicegui>=3.4.1",
    "passlib>=1.7.4",
    "sqlmodel>=0.0.29",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
